PERFETTO ORA: RENDERE OGNI PIATTO CLICCABILE + CHE RIMANGA SALVATO

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".Menu"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Schermata0"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
