--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".Menu"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ble.MainActivity"
             android:exported="true" />
 
         <activity
