--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src/main/res/layout/layout_ble',
+                        'src/main/res/layout',
+                        'src/main/res'
+            }
+        }
+    }
 }
 
 dependencies {
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -42,11 +50,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation 'org.jetbrains.anko:anko:0.10.8'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
-    // ktlint "com.pinterest:ktlint:0.36.0"
 }
 
 
